--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,5 +7,5 @@
   "password": "postgres",
   "database": "khong_portfolio",
   "entities": ["dist/entities/*.js"],
-  "migrations": ["dist/mgirations/*.js"]
+  "migrations": ["dist/migrations/*.js"]
 }
