finished setting up docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,7 @@ services:
     depends_on:
       - postgresql
       - redis
+    environment:
+      - NODE_ENV=production
 volumes:
   postgres:
