--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
     "mikro-orm": "^4.4.1",
+    "newrelic": "^7.5.2",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "redis": "^3.1.2",
