--- a/package.json
+++ b/package.json
@@ -5,42 +5,31 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "migrate": "mikro-orm migration:create"
+    "dev": "nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express-session": "^1.17.5",
     "@types/node": "^14.14.22",
-    "@types/redis": "^2.8.28",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@types/connect-redis": "0.0.16",
     "apollo-server-express": "^2.19.2",
     "argon2": "^0.27.2",
     "cloudinary": "^1.25.1",
-    "connect-redis": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
-    "mikro-orm": "^4.4.1",
     "newrelic": "^7.5.2",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "redis": "^3.1.2",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.31"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
