database now back in working ocndition

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "postgres",
-  "database": "khong-portfolio",
+  "database": "khong_portfolio",
   "entities": [
     "dist/entities/*.js"
   ],
