--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
       - .:/code
     depends_on:
       - postgresql
+    environment:
+      - DATABASE_HOST=postgresql
+
 
 volumes:
   postgres:
